Fixed Footer Image, updated scrollbar for desktop screens

--- a/src/App.css
+++ b/src/App.css
@@ -161,6 +161,26 @@ select {
   }
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--accent-color);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 /* Navbar */
 
 .navBar {
